--- a/index.html
+++ b/index.html
@@ -2,11 +2,19 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="./resources/style.css" type="text/css">
+    <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
     <title>Excursion Project</title>
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
-    <a class="download-link" href="#">Download Excursion (Comming soon!)</a>
+    <p><a class="download-link" href="#">Download Excursion (Comming soon!)</a></p>
+    <p><video src="./resources/video/excursion.mp4" autoplay loop poster="posterimage.jpg"></p>
+    <p> <h2>Your personal travel guige</h2></p>
+    <p>Excursion remembers places you like, and recommends new ponts of interests around you.</p>
+    <p> <img src="./resources/images/camp.jpg" alt=""> </p>
+    <p> <img src="./resources/images/phone.png" alt=""> </p>
+    <h2>Comming soon for iPhone and Android</h2>
+    <p><a class="download-link" href="#">Download Excursion (Comming soon!)</a></p>
+    </video>
   </body>
 </html>
