--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p><a class="download-link" href="#">Download Excursion (Comming soon!)</a></p>
     <p><video src="./resources/video/excursion.mp4" autoplay loop poster="posterimage.jpg"></p>
     <p> <h2>Your personal travel guige</h2></p>
-    <p>Excursion remembers places you like, and recommends new ponts of interests around you.</p>
+    <p class="content">Excursion remembers places you like, and recommends new ponts of interests around you.</p>
     <p> <img src="./resources/images/camp.jpg" alt=""> </p>
     <p> <img src="./resources/images/phone.png" alt=""> </p>
     <h2>Comming soon for iPhone and Android</h2>
