--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
     <title>Excursion Project</title>
   </head>
   <body>
-    <h1>Discover hidden places in the world around you</h1>
-    <p><a class="download-link" href="#">Download Excursion (Comming soon!)</a></p>
-    <p><video src="./resources/video/excursion.mp4" autoplay loop poster="posterimage.jpg"></p>
-    <p> <h2>Your personal travel guige</h2></p>
-    <p class="content">Excursion remembers places you like, and recommends new ponts of interests around you.</p>
-    <p> <img src="./resources/images/camp.jpg" alt=""> </p>
-    <p> <img src="./resources/images/phone.png" alt=""> </p>
-    <h2>Comming soon for iPhone and Android</h2>
-    <p><a class="download-link" href="#">Download Excursion (Comming soon!)</a></p>
-    </video>
+    <header>Discover hidden places in the world around you</header>
+    <main>
+      <p><a class="download-link" href="#">Download Excursion (Comming soon!)</a></p>
+      <p><video src="./resources/video/excursion.mp4" autoplay loop poster="posterimage.jpg"></video></p>
+      <p> <h1>Your personal travel guide</h1></p>
+      <p class="content">Excursion remembers places you like, and recommends new ponts of interests around you.</p>
+      <p> <img src="./resources/images/camp.jpg" alt=""> </p>
+      <p> <img src="./resources/images/phone.png" alt=""> </p>
+      <h1>Comming soon for iPhone and Android</h1>
+      <p><a class="download-link" href="#">Download Excursion (Comming soon!)</a></p>
+    </main>
+  <footer>&copy; Excursion</footer>
   </body>
 </html>
