--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>Discover hidden places in the world around you</header>
     <main>
       <p><a class="download-link" href="#">Download Excursion (Comming soon!)</a></p>
-      <p><video src="./resources/video/excursion.mp4" autoplay loop poster="posterimage.jpg"></video></p>
+      <p><video autoplay loop > <source src="./resources/video/excursion.mp4" type="video/mp4"> </video></p>
       <p> <h1>Your personal travel guide</h1></p>
       <p class="content">Excursion remembers places you like, and recommends new ponts of interests around you.</p>
       <p> <img src="./resources/images/camp.jpg" alt=""> </p>
